--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 </div>
 <!-- page break middle2 section -->
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus eius dolores perferendis praesentium, est error et? Quaerat soluta nisi sapiente nobis. Doloribus ex tempora nulla exercitationem dolor labore dignissimos.</p>
 <!-- This is the footer section -->
 
   <footer class="footer">
