--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 <!-- page break middle2 section -->
 
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum praesentium numquam consectetur odit doloremque ducimus facilis laborum a molestias, impedit voluptatibus ullam quis voluptas inventore illum fuga consequatur iste minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia natus eius dolores perferendis praesentium, est error et? Quaerat soluta nisi sapiente nobis. Doloribus ex tempora nulla exercitationem dolor labore dignissimos.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam illum voluptatem sequi, ratione earum nihil esse qui labore ex nostrum quod repudiandae similique accusamus tempore cupiditate eligendi necessitatibus, quo praesentium?</p>
 <!-- This is the footer section -->
 
   <footer class="footer">
