updates various sections in the landing page

--- a/index.html
+++ b/index.html
@@ -7,44 +7,143 @@
         <link rel="stylesheet" href="./Assets/css/style.css" type="text/css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Actor&family=Adamina&family=Poppins&display=swap" rel="stylesheet">        
+        <link href="https://fonts.googleapis.com/css2?family=Actor&family=Adamina&family=Poppins&display=swap" rel="stylesheet">  
+
         <title>Quick Movers Website</title>
     </head>
     <body>
-        <!-----THE END------->
-            <section class="final-container">
-                <h3>move at a tap of <span>a button</span></h3>
-                <div class="line-across"></div>
-                <div class="conclusion">
-                    <div class="row">
-                        <i class='bx bxl-facebook'></i>
-                        <i class='bx bxl-twitter'></i>
-                        <i class='bx bxl-instagram'></i>
-                    </div>
+        <!-- Divison 1 -->
+       <div class="container">
+    <section class="container1">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="subject.html">Movers</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <button class="login1">Login</button>
+                <button class="login2">Login</button>
+            </ul>
+        </nav>
+        <div class="text">
+            <h1>Change is inevitable but tasking. Find your reliable change partner.</h1>
+            <h3>In one roof ,get the solutions to your house moving Nightmares</h3>
+        </div>
+    </section>
 
-                    <div class="links">
-                        <p>column heading</p>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                    </div>
-                    <div class="links">
-                        <p>column heading</p>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                    </div>
-                    <div class="links">
-                        <p>column heading</p>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                        <a href="#">link goes here</a>
-                    </div>
+    <!-- Divison 2 -->
+    <section class="divison-container">
+        <div class="divison-image">
+            <img src="./Assets/images/moving2 1.png">
+        </div>
+        <div class="divison-text-container">
+            <div class="about-text">
+                <h1>Cut the Hustle</h1>
+                <h3>In this current tough economic situations, living is already a hustle. Why then should you worry about how you should move to live better?</h3>
+                <button class="learnmore-button">Learn More <i class='bx bx-right-arrow-alt bx-fw'></i></button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Graphics of top movers section -->
+    <section class="mover-container">
+       <hr class="horizontal line" width="20%" color="yellow">
+        <h1>Our Top Movers</h1>
+        <div class="top-movers">
+            <div class="mover-box">
+                <img src="./Assets/images/ehem 1.png">
+                <h4>A+ Movers</h4>
+                <span class="icon">
+                    <i class='bx bxs-bed' id="icons">4</i>
+                    <i class='bx bxs-bath'>2</i>
+                    <i class='bx bx-shape-square'>2</i>
+                </span>
+            </div>
+            <div class="mover-box">
+                <img src="./Assets/images/wewe 1.png">
+                <h4>Maridadi home logistics</h4>
+                <span class="icon">
+                    <i class='bx bxs-bed'>4</i>
+                    <i class='bx bxs-bath'>2</i>
+                    <i class='bx bx-shape-square'>2</i>
+                </span>
+            </div>
+            <div class="mover-box">
+                <img src="./Assets/images/movers 1.png">
+                <h4>Ufalme movers</h4>
+                <span class="icon">
+                    <i class='bx bxs-bed'>4</i>
+                    <i class='bx bxs-bath'>2</i>
+                    <i class='bx bx-shape-square'>2</i>
+                </span>
+            </div>
+            <div class="mover-box">
+                <img src="./Assets/images/chapchap 1.png">
+                <h4>Movers Chapchap</h4>
+                <span class="icon">
+                    <i class='bx bxs-bed'>4</i>
+                    <i class='bx bxs-bath'>2</i>
+                    <i class='bx bx-shape-square'>2</i>
+                </span>
+            </div>
+            <div class="mover-box">
+                <img src="./Assets/images/mashinani 1.png">
+                <h4>Songa Mashimoni</h4>
+                <span class="icon">
+                    <i class='bx bxs-bed'>4</i>
+                    <i class='bx bxs-bath'>2</i>
+                    <i class='bx bx-shape-square'>2</i>
+                </span>
+            </div>
+            <div class="mover-box">
+                <img src="./Assets/images/songa 1.png">
+                <h4>Upesi Logistics</h4>
+                <span class="icon">
+                    <i class='bx bxs-bed'>4</i>
+                    <i class='bx bxs-bath'>2</i>
+                    <i class='bx bx-shape-square'>2</i>
+                </span>
+            </div>
+        </div>
+    </section>
+    
+<!-- End of body section -->
+
+
+        <!-----THE END------->
+        <section class="footer-container" background="black" style="">
+            <h3>move at a tap of <span>a button</span></h3>
+            <div class="line-across" cl></div>
+            <div class="footer">
+                <div class="initial-links">
+                    <i class='bx bxl-facebook'></i>
+                    <i class='bx bxl-twitter'></i>
+                    <i class='bx bxl-instagram'></i>
                 </div>
-            </section>
+
+                <div class="links">
+                    <p>column heading</p>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                </div>
+                <div class="links">
+                    <p>column heading</p>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                </div>
+                <div class="links">
+                    <p>column heading</p>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                    <a href="#">link goes here</a>
+                </div>
+            </div>
+        </section>
         </div>
     </body>
 </html>
