adds some changes to the property page, such as the gallery

--- a/property.html
+++ b/property.html
@@ -20,8 +20,8 @@
                     <li><a href="#">nav link</a></li>
                     <li><a href="#">nav link</a></li>
                     <li><a href="#">nav link</a></li>
-                    <div class="work-container">
-                        <button class="work-button">Work with Us<i class='bx bx-right-arrow-alt bx-fw'></i></button>
+                    <div class="work">
+                        <button class="button">Work with Us<i class='bx bx-right-arrow-alt bx-fw'></i></button>
                     </div>
                 </ul>
             </nav>
@@ -29,59 +29,63 @@
             <div class="linked1-text">
                 <div class="linked1-text-left">
                     <h2>Modern House</h2>
-                    <h4>3002 Foster Ave,Brooklyn,Ny,11210,USA</h4>
+                    <h5>3002 Foster Ave,Brooklyn,Ny,11210,USA</h5>
                 </div>
-                <div class="navigation-text-right">
+                <div class="linked1-text-right">
                     <h3>$450,000</h3>
-                    <h4>$2800/sq ft</h4>
+                    <h4>$2,800/sq ft</h4>
                 </div>
             </div>
         </section>
+        
         <!--linked section part2-->
-        <section>
-            <div class="homebar-container">
-                <div class="home-gallery">
-                  <img src="./Assets/images/Property House.png" alt="Kitchen House" />
-                  <div class="home-slides">
-                    <img src="./Assets/images/Rectangle.png" alt="Dog in the Picture" />
-                    <img src="./Assets/images/Rectangle-1.png" alt="Orange-Plants" />
-                    <img src="./Assets/images/Rectangle-2.png" alt="Curtains" />
-                    <img src="./Assets/images/Rectangle-3.png" alt="Plants" />
-                    <img src="./Assets/images/Rectangle-4.png" alt="Plants" />
-                    <img src="./Assets/images/Rectangle-5.png" alt="Orange-Plants" />
-                    <img src="./Assets/images/Rectangle-6.png" alt="Orange-Plants" />
+        <div class="homebar-container1">
+          <div class="gallery">
+            <img src="./Assets/images/Property House.png"/>
+            <br>
+            <br>
+            <br>
+            <div class="slides">
+
+              <img src="./Assets/images/Rectangle.png"/>
+              <img src="./Assets/images/Rectangle-1.png"/>
+              <img src="./Assets/images/Rectangle-2.png"/>
+              <img src="./Assets/images/Rectangle-3.png"/>
+              <img src="./Assets/images/Rectangle-4.png"/>
+              <img src="./Assets/images/Rectangle-5.png"/>
+              <img src="./Assets/images/Rectangle-6.png"/>
+            </div>
+          </div>
+          <div class="card">
+            <div class="home-contact-name">
+                  <img src="./Assets/images/Rectangle-1.png"/>
+                  <div class="card1">
+                      <h4>Kayley Hall</h4>
+                      <p>view profile</p>
                   </div>
-                </div>
-                <div class="home-contact-card">
-                  <div class="home-contact-name">
-                        <img src="./Assets/images/Rectangle-6.png" alt="girl in photo" />
-                        <div class="card-name">
-                            <h4>Kayley Hall</h4>
-                            <p>view profile</p>
-                        </div>
-                  </div>
-                  <form action="">
-                    <div class="form-container">
-                      <input type="text" id="name" placeholder="Name"/>
-                    </div>
-                    <div class="form-container">
-                      <input type="number" id="phone" placeholder="Phone Number" />
-                    </div>
-                    <div class="form-container">
-                      <input type="email" id="email" Placeholder="Email" />
-                    </div>
-                    <div class="form-container">
-                      <input type="text" id="paragraph" placeholder="Hello, I am interested in.." />
-                    </div>
-                    <div class="learmore-container">
-                        <button class="learnmore-button-2">
-                            Learn More <i class="bx bx-right-arrow-alt bx-fw"></i>
-                          </button>
-                    </div>
-                  </form>
-                </div>
+            </div>
+            <form action="">
+              <div class="form-container">
+                <input type="text" placeholder="Name"/>
               </div>
-        </section>
-    </div>
+              <div class="form-container">
+                <input type="number"  placeholder="Phone" />
+              </div>
+              <div class="form-container">
+                <input type="email" Placeholder="Email" />
+              </div>
+              <div class="form-container">
+                <input type="text"  placeholder="Hello, I am interested in..." />
+              </div>
+              <div class="learmore-container">
+                  <button class="learnmore-button-2">
+                      Learn More <i class="bx bx-right-arrow-alt bx-fw"></i>
+                    </button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <
+
 </body>
 </html>
