updates an additional part3 in the property page

--- a/property.html
+++ b/property.html
@@ -85,7 +85,22 @@
             </form>
           </div>
         </div>
-        <
+        <!-- End of linked section part2 -->
+
+      <!-- Linked section part3 -->
+      <section>
+        <div class="part3">
+            <h3>Details</h3>
+            <div class="part3-button">
+              <button class="details-button"><i class="bx bxs-bed bx-sm">4</i></button>
+              <button class="details-button"><i class="bx bxs-bath bx-sm">2</i></button>
+              <button class="details-button"><i class="bx bx-shape-square bx-sm">2</i></button>
+              <button class="details-button">2</button>
+              <button class="details-button">2007</button>
+            </div>
+          </div>
+    </section>
+    <!-- End Linked section part3 -->
 
 </body>
 </html>
