updates another section in the property page, the description part

--- a/property.html
+++ b/property.html
@@ -100,7 +100,32 @@
             </div>
           </div>
     </section>
-    <!-- End Linked section part3 -->
+    <!-- End of Linked section part3 -->
+
+    <!-- Linked section part4 -->
+
+    <div class="part4">
+      <h3>Description</h3>
+      <div class="text4">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima ex hic
+          distinctio vitae dolorum, commodi quia architecto asperiores adipisci quo. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis distinctio soluta dolores ea corrupti numquam quam architecto ipsum autem tenetur?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima ex hic
+          distinctio vitae dolorum, commodi quia architecto asperiores adipisci quo. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis distinctio soluta dolores ea corrupti numquam quam architecto ipsum autem tenetur?
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima ex hic
+          distinctio vitae dolorum, commodi quia architecto asperiores adipisci quo. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis distinctio soluta dolores ea corrupti numquam quam architecto ipsum autem tenetur?
+        </p>
+      </div>
+  </div>
+    <!-- End of linked sectoin part4  -->
+
+    <!-- Linked section part5  -->
+    
+    <!-- End of Linked section part5 -->
 
 </body>
 </html>
