Updates the 5th section of the property page containing the features

--- a/property.html
+++ b/property.html
@@ -124,7 +124,33 @@
     <!-- End of linked sectoin part4  -->
 
     <!-- Linked section part5  -->
-    
+    <div class="part5">
+      <h3>Features</h3>
+      <div class="part5-links">
+        <div class="part5-icons">
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png" > Air Conditioning</a>
+        </div>
+        <div class="part5-icons">
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+        </div>
+        <div class="part5-icons">
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+          <a href="#"><img src="/Assets/images/icon.png"> Air Conditioning</a>
+        </div>
+      </div>
+    </div>
+</div>
     <!-- End of Linked section part5 -->
 
 </body>
