adds some updates to part6, the footer

--- a/property.html
+++ b/property.html
@@ -153,5 +153,47 @@
 </div>
     <!-- End of Linked section part5 -->
 
+    <br><br><br><br><br>
+
+    <!-- Linked section part6 -->
+    <section class="footer-container" background="black" style="">
+      <h3>Make your dreams a <span>reality</span></h3>
+      <div class="line-across" cl></div>
+      <div class="footer">
+          <div class="initial-links">
+              <i class='bx bxl-facebook'></i>
+              <i class='bx bxl-twitter'></i>
+              <i class='bx bxl-instagram'></i>
+          </div>
+
+          <div class="links">
+              <p>column heading</p>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+          </div>
+          <div class="links">
+              <p>column heading</p>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+          </div>
+          <div class="links">
+              <p>column heading</p>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+              <a href="#">link goes here</a>
+          </div>
+      </div>
+  </section>
+
+
+    <!-- End of Linked section part6 -->
+
+
+
 </body>
 </html>
