updates the footer, addittion of a line

--- a/property.html
+++ b/property.html
@@ -155,9 +155,11 @@
 
     <br><br><br><br><br>
 
-    <!-- Linked section part6 -->
-    <section class="footer-container" background="black" style="">
+    <!-- Linked section footer -->
+    <section class="footer-container" background="black">
       <h3>Make your dreams a <span>reality</span></h3>
+    <hr color="gray">
+      <br><br><br>
       <div class="line-across" cl></div>
       <div class="footer">
           <div class="initial-links">
@@ -189,9 +191,7 @@
           </div>
       </div>
   </section>
-
-
-    <!-- End of Linked section part6 -->
+    <!-- End of Linked section footer -->
 
 
 
