--- a/property.html
+++ b/property.html
@@ -155,6 +155,79 @@
 
     <br><br><br><br><br>
 
+    <!-- Linked  section part6 -->
+
+    <section class="part6">
+      <div class="line"></div>
+
+      <h1>Similiar Listings</h1>
+      
+          <div class="container">
+              <div class="similar list-card">
+                  <img src="./Assets/images/Rectangle-7.png" alt="A movers truck pictured" />
+                  <h4>Malto House</h4>
+                  <div class="list">
+                  <button class="list-button">
+                          <i class="bx bxs" id="icons">4</i>
+                  </button>
+                  <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                  </button>
+                  <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                  </button>
+                  </div>
+              </div>
+              <div class="list-card">
+                  <img src="./Assets/images/Rectangle-8.png" alt="A movers truck pictured" />
+                  <h4>Malto House</h4>
+                  <div class="list">
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">4</i>
+                      </button>
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                      </button>
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                      </button>
+                  </div>
+              </div>
+              <div class="list-card">
+                  <img src="./Assets/images/Rectangle-9.png" alt="A movers truck pictured" />
+                  <h4>Malto House</h4>
+                  <div class="list">
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">4</i>
+                      </button>
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                      </button>
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                      </button>
+                  </div>
+              </div>
+              <div class="list-card">
+                  <img src="./Assets/images/Rectangle-10.png" alt="A movers truck pictured" />
+                  <h4>Malto House</h4>
+                  <div class="list">
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">4</i>
+                      </button>
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                      </button>
+                      <button class="list-button">
+                          <i class="bx bxs" id="icons">2</i>
+                      </button>
+                  </div>
+              </div>
+          </div>
+  </section>
+
+    <!-- End of Linked section part6 -->
+
     <!-- Linked section footer -->
     <section class="footer-container" background="black">
       <h3>Make your dreams a <span>reality</span></h3>
