--- a/property.html
+++ b/property.html
@@ -92,9 +92,9 @@
         <div class="part3">
             <h3>Details</h3>
             <div class="part3-button">
-              <button class="details-button"><i class="bx bxs-bed bx-sm">4</i></button>
-              <button class="details-button"><i class="bx bxs-bath bx-sm">2</i></button>
-              <button class="details-button"><i class="bx bx-shape-square bx-sm">2</i></button>
+              <button class="details-button"><i>4</i></button>
+              <button class="details-button"><i>2</i></button>
+              <button class="details-button"><i>2</i></button>
               <button class="details-button">2</button>
               <button class="details-button">2007</button>
             </div>
@@ -164,61 +164,61 @@
       
           <div class="container">
               <div class="similar list-card">
-                  <img src="./Assets/images/Rectangle-7.png" alt="A movers truck pictured" />
+                  <img src="./Assets/images/Rectangle-7.png" />
                   <h4>Malto House</h4>
                   <div class="list">
-                  <button class="list-button">
+                  <button class="btn6">
                           <i class="bx bxs" id="icons">4</i>
                   </button>
-                  <button class="list-button">
+                  <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                   </button>
-                  <button class="list-button">
+                  <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                   </button>
                   </div>
               </div>
               <div class="list-card">
-                  <img src="./Assets/images/Rectangle-8.png" alt="A movers truck pictured" />
+                  <img src="./Assets/images/Rectangle-8.png"/>
                   <h4>Malto House</h4>
                   <div class="list">
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">4</i>
                       </button>
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                       </button>
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                       </button>
                   </div>
               </div>
               <div class="list-card">
-                  <img src="./Assets/images/Rectangle-9.png" alt="A movers truck pictured" />
+                  <img src="./Assets/images/Rectangle-9.png"/>
                   <h4>Malto House</h4>
                   <div class="list">
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">4</i>
                       </button>
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                       </button>
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                       </button>
                   </div>
               </div>
               <div class="list-card">
-                  <img src="./Assets/images/Rectangle-10.png" alt="A movers truck pictured" />
+                  <img src="./Assets/images/Rectangle-10.png"/>
                   <h4>Malto House</h4>
                   <div class="list">
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">4</i>
                       </button>
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                       </button>
-                      <button class="list-button">
+                      <button class="btn6">
                           <i class="bx bxs" id="icons">2</i>
                       </button>
                   </div>
