updates the css, hides the inner overflow

--- a/property.html
+++ b/property.html
@@ -11,6 +11,8 @@
     <title>property</title>
 </head>
 <body>
+  <div class="inner">
+  <section>
     <div class="page-container">
         <!--Linked section part1-->
         <section class="linked-bar">
@@ -150,7 +152,7 @@
         </div>
       </div>
     </div>
-</div>
+
     <!-- End of Linked section part5 -->
 
     <br><br><br><br><br>
@@ -266,7 +268,8 @@
   </section>
     <!-- End of Linked section footer -->
 
-
-
+  </div>
+</section>
+</div>
 </body>
 </html>
