updates the css, background color to gray

--- a/property.html
+++ b/property.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </section>
-        
+        <section class="bgg">
         <!--linked section part2-->
         <div class="homebar-container1">
           <div class="gallery">
@@ -227,7 +227,7 @@
               </div>
           </div>
   </section>
-
+</section>
     <!-- End of Linked section part6 -->
 
     <!-- Linked section footer -->
