--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="subject.html">Movers</a></li>
+                <li><a href="property.html">Movers</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <button class="login1">Login</button>
                 <button class="login2">Login</button>
