Updates changes made in the css file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
         <title>Quick Movers Website</title>
     </head>
-    <body>
-        <!-- Divison 1 -->
-       <div class="container">
+    <body></div>
+        <div class="outer">
+            <!-- Divison 1 -->
+       <div class="containr">
     <section class="container1">
         <nav>
             <ul>
@@ -54,54 +55,54 @@
                 <img src="./Assets/images/ehem 1.png">
                 <h4>A+ Movers</h4>
                 <span class="icon">
-                    <i class='bx bxs-bed' id="icons">4</i>
-                    <i class='bx bxs-bath'>2</i>
-                    <i class='bx bx-shape-square'>2</i>
+                    <i  id="icons">4</i>
+                    <i >2</i>
+                    <i >2</i>
                 </span>
             </div>
             <div class="mover-box">
                 <img src="./Assets/images/wewe 1.png">
                 <h4>Maridadi home logistics</h4>
                 <span class="icon">
-                    <i class='bx bxs-bed'>4</i>
-                    <i class='bx bxs-bath'>2</i>
-                    <i class='bx bx-shape-square'>2</i>
+                    <i >4</i>
+                    <i >2</i>
+                    <i >2</i>
                 </span>
             </div>
             <div class="mover-box">
                 <img src="./Assets/images/movers 1.png">
                 <h4>Ufalme movers</h4>
                 <span class="icon">
-                    <i class='bx bxs-bed'>4</i>
-                    <i class='bx bxs-bath'>2</i>
-                    <i class='bx bx-shape-square'>2</i>
+                    <i>4</i>
+                    <i>2</i>
+                    <i >2</i>
                 </span>
             </div>
             <div class="mover-box">
                 <img src="./Assets/images/chapchap 1.png">
                 <h4>Movers Chapchap</h4>
                 <span class="icon">
-                    <i class='bx bxs-bed'>4</i>
-                    <i class='bx bxs-bath'>2</i>
-                    <i class='bx bx-shape-square'>2</i>
+                    <i >4</i>
+                    <i >2</i>
+                    <i >2</i>
                 </span>
             </div>
             <div class="mover-box">
                 <img src="./Assets/images/mashinani 1.png">
                 <h4>Songa Mashimoni</h4>
                 <span class="icon">
-                    <i class='bx bxs-bed'>4</i>
-                    <i class='bx bxs-bath'>2</i>
-                    <i class='bx bx-shape-square'>2</i>
+                    <i> </i>4</i>
+                    <i >2</i>
+                    <i >2</i>
                 </span>
-            </div>
-            <div class="mover-box">
+             </div>
+        <div class="mover-box">
                 <img src="./Assets/images/songa 1.png">
                 <h4>Upesi Logistics</h4>
                 <span class="icon">
-                    <i class='bx bxs-bed'>4</i>
-                    <i class='bx bxs-bath'>2</i>
-                    <i class='bx bx-shape-square'>2</i>
+                    <i > </i>4</i>
+                    <i > </i>2</i>
+                    <i >2</i>
                 </span>
             </div>
         </div>
@@ -112,7 +113,7 @@
 
         <!-----THE END------->
         <section class="footer-container" background="black" style="">
-            <h3>move at a tap of <span>a button</span></h3>
+            <h3>Make your dreams a <span>reality</span></h3>
             <div class="line-across" cl></div>
             <div class="footer">
                 <div class="initial-links">
@@ -145,5 +146,6 @@
             </div>
         </section>
         </div>
+    </div>
     </body>
 </html>
