--- a/property.html
+++ b/property.html
@@ -11,7 +11,7 @@
     <title>property</title>
 </head>
 <body>
-  <div class="inner">
+  <div class="inner"></div>
   <section>
     <div class="page-container">
         <!--Linked section part1-->
